--- a/PianoTouchSample/res/layout/pianotouchsample.xml
+++ b/PianoTouchSample/res/layout/pianotouchsample.xml
@@ -1,171 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <!-- フレームレイアウト -->
-<FrameLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
+<!-- フレームレイアウト -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-  <!-- リニアレイアウト -->
-  <LinearLayout
-    android:id="@+id/layout_key_white"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <!-- 白鍵用ボタン -->
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_c4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_d4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+        <!-- リニアレイアウト -->
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_e4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+        <LinearLayout
+            android:id="@+id/layout_key_white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_f4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <!-- 白鍵用ボタン -->
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_g4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_c4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_a4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_d4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_b4"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_e4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_c5"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_f4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_d5"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_g4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_e5"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_a4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_f5"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_b4"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="150dip"
-      android:id="@+id/ibtn_g5"
-      android:background="@drawable/k_w"
-      android:layout_width="48dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_c5"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-  </LinearLayout>
+            <ImageButton
+                android:id="@+id/ibtn_d5"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-  <!-- リニアレイアウト -->
-  <LinearLayout
-    android:id="@+id/layout_key_black"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <!-- 黒鍵用ボタン -->
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_c_s_4"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="36dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_e5"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_d_s_4"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="24dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_f5"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_f_s_4"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="72dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_g5"
+                android:layout_width="48dip"
+                android:layout_height="150dip"
+                android:background="@drawable/k_w"
+                android:contentDescription="@string/img_img" />
+        </LinearLayout>
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_g_s_4"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="24dip"
-      android:contentDescription="@string/img_img" />
+        <!-- リニアレイアウト -->
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_a_s_4"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="24dip"
-      android:contentDescription="@string/img_img" />
+        <LinearLayout
+            android:id="@+id/layout_key_black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_c_s_5"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="72dip"
-      android:contentDescription="@string/img_img" />
+            <!-- 黒鍵用ボタン -->
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_d_s_5"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="24dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_c_s_4"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="36dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
 
-    <ImageButton
-      android:layout_height="80dip"
-      android:id="@+id/ibtn_f_s_5"
-      android:background="@drawable/k_b"
-      android:layout_width="24dip"
-      android:layout_marginLeft="72dip"
-      android:contentDescription="@string/img_img" />
+            <ImageButton
+                android:id="@+id/ibtn_d_s_4"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="24dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
 
-  </LinearLayout>
-</FrameLayout>
+            <ImageButton
+                android:id="@+id/ibtn_f_s_4"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="72dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+
+            <ImageButton
+                android:id="@+id/ibtn_g_s_4"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="24dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+
+            <ImageButton
+                android:id="@+id/ibtn_a_s_4"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="24dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+
+            <ImageButton
+                android:id="@+id/ibtn_c_s_5"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="72dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+
+            <ImageButton
+                android:id="@+id/ibtn_d_s_5"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="24dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+
+            <ImageButton
+                android:id="@+id/ibtn_f_s_5"
+                android:layout_width="24dip"
+                android:layout_height="80dip"
+                android:layout_marginLeft="72dip"
+                android:background="@drawable/k_b"
+                android:contentDescription="@string/img_img" />
+        </LinearLayout>
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/record" />
+
+    <Button
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/record"
+        android:background="@drawable/play" />
+    
+    <Button
+        android:id="@+id/pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/play"
+        android:background="@drawable/pause" />
+    
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/pause"
+        android:background="@drawable/stop" />
+
+</RelativeLayout>
